Cosmetic edits Users.